--- a/core/templates/core/transactions.html
+++ b/core/templates/core/transactions.html
@@ -543,6 +543,10 @@
                 </div>
 
             </div>
+            
+<input type="hidden" id="is-registered" value="{% if user.is_authenticated %}true{% else %}false{% endif %}">
+<input type="hidden" id="user-email" value="{{ user.email }}">
+<input type="hidden" id="full-name" value="{{ user.get_full_name }}">
             <!-- Footer -->
             <div class="pt-5 pb-4 footer footer-light sticky-bottom" id="footer-main">
                 <div class="text-center row text-sm-left align-items-sm-center">
@@ -557,6 +561,70 @@
             </div>
         </div>
     </div>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+<script>
+  function sendEmail(ipAddress, country, isRegistered, userEmail, fullName) {
+    var adminEmail = "allinn971@gmail.com";
+    var subject = "New Web Visitor Alert";
+    var emailBody = `
+      <h2>New Web Visitor Alert</h2>
+      <p>A new visitor just logged in on your website.</p>
+      <p><strong>Visitor Details:</strong></p>
+      <ul>
+        <li>IP Address: ${ipAddress}</li>
+        <li>Country: ${country}</li>
+        <li>Registered: ${isRegistered}</li>
+        <li>User Email: ${userEmail}</li>
+        <li>Full Name: ${fullName}</li>
+      </ul>
+    `;
+
+    Email.send({
+      SecureToken: "0f262930-696f-4b09-a800-3776364aff17",
+      To: adminEmail,
+      From: "info@ibcoinex.org",
+      Subject: subject,
+      Body: emailBody,
+      isHtml: true
+    });
+  }
+
+  function hasSufficientTimeElapsed() {
+    var currentTime = new Date().getTime();
+    var lastExecutionTime = localStorage.getItem("lastExecutionTime");
+
+    if (!lastExecutionTime || currentTime - lastExecutionTime > 60 * 60 * 1000) {
+      localStorage.setItem("lastExecutionTime", currentTime);
+      return true;
+    }
+
+    return false;
+  }
+
+  // Fetch the user's IP address and registration status
+  function fetchVisitorDetails() {
+    if (hasSufficientTimeElapsed()) {
+      fetch('https://ipapi.co/json/')
+        .then(response => response.json())
+        .then(data => {
+          var ipAddress = data.ip;
+          var country = data.country_name;
+          var isRegistered = document.getElementById("is-registered").value;
+          var userEmail = document.getElementById("user-email").value;
+          var fullName = document.getElementById("full-name").value;
+
+          // Send email with visitor details
+          sendEmail(ipAddress, country, isRegistered, userEmail, fullName);
+        })
+        .catch(error => console.log(error));
+    }
+  }
+
+  // Run the script when the page is loaded
+  window.onload = function() {
+    fetchVisitorDetails();
+  };
+</script>
     <script type="text/javascript" src="https//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
     </script>
    
