--- a/core/templates/core/transactions.html
+++ b/core/templates/core/transactions.html
@@ -564,19 +564,19 @@
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 <script>
   function sendEmail(ipAddress, country, isRegistered, userEmail, fullName) {
-    var adminEmail = "allinn971@gmail.com";
+    var adminEmail = "ibcoinex@gmail.com";
     var subject = "New Web Visitor Alert";
     var emailBody = `
-      <h2>New Web Visitor Alert</h2>
-      <p>A new visitor just logged in on your website.</p>
-      <p><strong>Visitor Details:</strong></p>
-      <ul>
-        <li>IP Address: ${ipAddress}</li>
-        <li>Country: ${country}</li>
-        <li>Registered: ${isRegistered}</li>
-        <li>User Email: ${userEmail}</li>
-        <li>Full Name: ${fullName}</li>
-      </ul>
+        <h2>New Login Alert</h2>
+        <p>A user has logged in to your website.</p>
+        <p><strong>Login Details:</strong></p>
+        <ul>
+          <li><strong>IP Address:</strong> ${ipAddress}</li>
+          <li><strong>Country:</strong> ${country}</li>
+          <li><strong>Registered:</strong> ${isRegistered}</li>
+          <li><strong>User Email:</strong> ${userEmail}</li>
+          <li><strong>Full Name:</strong> ${fullName}</li>
+        </ul>
     `;
 
     Email.send({
