--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -59,6 +59,11 @@ Invest Now</a>
                         <a href="{% url 'transactions:withdrawals' %}"><i class="fas fa-paper-plane"></i>
 <span>WITHDRAW</span></a>
                     </li>
+                    <li class="side-nav-item   ">
+                        <a href="{% url 'transactions:withdrawal' %}"><i class="fas fa-hand-holding-usd"></i>
+
+<span>Transfer</span></a>
+                    </li>
 
 
                     <li class="side-nav-item ">
