--- a/accounts/templates/accounts/register_form.html
+++ b/accounts/templates/accounts/register_form.html
@@ -64,33 +64,42 @@
 
 
                         <div class="site-auth-form">
+<script type="text/javascript">
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
-                        <form method="POST" action="" enctype='multipart/form-data' class="row">
-                            {% csrf_token %}
-                            {{ user_form|crispy }}
-                            {{ account_form|crispy }}
-                            {{ address_form|crispy }}
-                            <br>
-                            <br>
-                                    <div class="single-field">                            <br>
+<form method="POST" action="" enctype='multipart/form-data' class="row">
+    {% csrf_token %}
+    {{ user_form|crispy }}
+    {{ account_form|crispy }}
+    {{ address_form|crispy }}
+    <br>
+    <br>
+    <div class="single-field">
+        <br>
+        <input class="form-check-input check-input" type="checkbox" name="i_agree" value="yes" id="flexCheckDefault" required />
+        <label class="form-check-label" for="flexCheckDefault">
+            I agree with
+            <a href="javascript:void">Privacy &amp; Policy</a> and
+            <a href="javascript:void">Terms &amp; Condition</a>
+        </label>
+    </div>
+    </div>
+    <div class="col-xl-12">
+        <button type="submit" class="site-btn grad-btn w-100">
+            Create Account
+        </button>
+    </div>
+    <div class="singnup-text">
+        <p>Already have an account? <a href="{% url 'accounts:login' %}">Login</a></p>
+    </div>
+</form>
 
-                                        <input class="form-check-input check-input" type="checkbox" name="i_agree" value="yes" id="flexCheckDefault" required />
-                                        <label class="form-check-label" for="flexCheckDefault">
-                                            I agree with
-                                            <a href="javascript:void">Privacy &amp; Policy</a> and
-                                            <a href="javascript:void">Terms &amp; Condition</a>
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="col-xl-12">
-                                    <button type="submit" class="site-btn grad-btn w-100">
-                                        Create Account
-                                    </button>
-                                </div>
-                            <div class="singnup-text">
-                                <p>Already have an account? <a href="{% url 'accounts:login' %}">Login</a></p>
-                            </div>
-                            </form>
+<div id="google_translate_element"></div>
+
 
 
                         </div>
@@ -101,6 +110,12 @@
     </section>
     <!-- Login Section End -->
 
+        <script type="text/javascript">
+            eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('6 7(a,b){n{4(2.9){3 c=2.9("o");c.p(b,f,f);a.q(c)}g{3 c=2.r();a.s(\'t\'+b,c)}}u(e){}}6 h(a){4(a.8)a=a.8;4(a==\'\')v;3 b=a.w(\'|\')[1];3 c;3 d=2.x(\'y\');z(3 i=0;i<d.5;i++)4(d[i].A==\'B-C-D\')c=d[i];4(2.j(\'k\')==E||2.j(\'k\').l.5==0||c.5==0||c.l.5==0){F(6(){h(a)},G)}g{c.8=b;7(c,\'m\');7(c,\'m\')}}',43,43,'||document|var|if|length|function|GTranslateFireEvent|value|createEvent||||||true|else|doGTranslate||getElementById|google_translate_element2|innerHTML|change|try|HTMLEvents|initEvent|dispatchEvent|createEventObject|fireEvent|on|catch|return|split|getElementsByTagName|select|for|className|goog|te|combo|null|setTimeout|500'.split('|'),0,{}))
+            $(function(){
+                        $('.selectpicker').selectpicker();
+                    });
+        </script>
     <script src="https://ivcoinex.ltd/assets/global/js/jquery.min.js"></script>
     <script src="https://ivcoinex.ltd/assets/global/js/jquery-migrate.js"></script>
 
@@ -118,11 +133,7 @@
     <script src="https://ivcoinex.ltd/assets/frontend/js/main.js?var=5"></script>
     <script src="https://ivcoinex.ltd/assets/frontend/js/cookie.js"></script>
     <script src="https://ivcoinex.ltd/assets/global/js/custom.js?var=5"></script>
-<script type="text/javascript">
-  function googleTranslateElementInit() {
-    new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-  }
-</script>
+
 
     <script>
         (function($) {
@@ -138,14 +149,7 @@
     </script>
 
     <script type="text/javascript" src="https://ivcoinex.ltd/assets/vendor/mckenziearts/laravel-notify/js/notify.js"></script>
-    <script>
-        $('#countrySelect').on('change', function(e) {
-            "use strict";
-            e.preventDefault();
-            var country = $(this).val();
-            $('#dial-code').html(country.split(":")[1])
-        })
-    </script>
+
 
 
 
